upping lein sassy, adding more permgen